--- a/styles.css
+++ b/styles.css
@@ -1,144 +1,185 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
+.index_body{
+    background: linear-gradient(rgba(34, 34, 34, 0.6), rgba(34, 34, 34, 0.6)), url(/home/evgen/Documents/my_website/images/background.png);
 
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing:border-box;
 }
 
+/*  -----------------------main buttons------------------------- */
+.main_buttons {
+    --hover-shadows: 16px 16px 33px #121212,
+                      -16px -16px 33px #303030;
+    --accent: fuchsia;
+    font-weight: bold;
+    letter-spacing: 0.1em;
+    border: none;
+    border-radius: 1.1em;
+    background-color: #212121;
+    color: white;
+    padding: 1em 2em;
+    transition: box-shadow ease-in-out 0.3s,
+                background-color ease-in-out 0.1s,
+                letter-spacing ease-in-out 0.1s,
+                transform ease-in-out 0.1s;
+    box-shadow: 13px 13px 10px #1c1c1c,
+                -13px -13px 10px #262626;
+                
+                
+    margin-left: 50px;
+    transform:  translateY(20px);
+}
+   
 .container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center; /* Центрирование по горизонтали */
+    align-items: center; /* Центрирование по вертикали */  
 }
-
-.parent-link {
-    font-size: 1rem;
-}
-
-.parent-link, .icon {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-.logo {
-    height: 42px;
-}
-
-.logo:hover {
-    opacity: 0.7;
-}
-
-.social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.social-links, .msg {
-    text-decoration: none;
-}
-
-.social-links {
-    padding: 0 2.5rem;
-    margin: 0;
-    color: white;
-    font-weight: 500;
-}
-
-.social-links:hover {
-    opacity: 0.8;
-}
-
-.sm-icon {
-    padding: 0 0.5rem;
-    margin: 0;
-    color: white;
-}
-
-.sm-icon:hover {
-    opacity: 0.8;
-}
-
-
-/*
-/* Стили для контейнера .icon 
-.icon {
-    display: flex;
-    gap: 10px;
-  }
-
-  .sm-icon {
-    text-decoration: none;
-    color: #333; 
-  }
-  
-  ion-icon {
-    font-size: 24px;
-    vertical-align: middle;
-  }
-  */
+   
+.main_buttons:hover {
+    box-shadow: var(--hover-shadows);
+   }
+   
+.main_buttons:active {
+    box-shadow: var(--hover-shadows),
+                 var(--accent) 0px 0px 30px 5px;
+    background-color: var(--accent);
+ transform: scale(0.95);
+   }
+   
+  /* ----------------------------------------------------------- */
   
   
   
-  
-  
-  .cta {
-    border: none;
-    background: none;
-  }
-  
-  .cta span {
-    padding-bottom: 7px;
-    letter-spacing: 4px;
-    font-size: 14px;
-    padding-right: 15px;
-    text-transform: uppercase;
-  }
-  
-  .cta svg {
-    transform: translateX(-8px);
-    transition: all 0.3s ease;
-  }
-  
-  .cta:hover svg {
-    transform: translateX(0);
-  }
-  
-  .cta:active svg {
-    transform: scale(0.9);
-  }
-  
-  .hover-underline-animation {
+  /* -------------------Home_button----------------------------- */
+.home_button {
+    margin-left: 50px;
+    transform:  translateY(20px);
+    
     position: relative;
-    color: black;
-    padding-bottom: 20px;
+    padding: 15px 45px;
+    background: #ffffff;
+    font-size: 17px;
+    font-weight: 500;
+    color: #181818;
+    border: 1px solid #ffffff;
+    border-radius: 8px;
+    filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, .2));
   }
   
-  .hover-underline-animation:after {
-    content: "";
+.home_button:hover {
+    border: 1px solid #ffffff;
+    background: linear-gradient(85deg, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff);
+    animation: wind 2s ease-in-out infinite;
+    
+    
+  }
+  
+  @keyframes wind {
+    0% {
+      background-position: 0% 50%;
+    }
+  
+    0% {
+      background-position: 50% 100%;
+    }
+  
+    0% {
+      background-position: 0% 50%;
+    }
+  }
+  
+.icon-1 {
     position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
+    top: 0;
+    right: 0;
+    width: 25px;
+    transform-origin: 0 0;
+    transform: rotate(10deg);
+    transition: all .5s ease-in-out;
+    filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, .3));
+  }
+  
+.home_button:hover .icon-1 {
+    animation: slay-1 3s cubic-bezier(0.52, 0, 0.58, 1) infinite;
+    transform: rotate(10deg);
+  }
+  
+  @keyframes slay-1 {
+    0% {
+      transform: rotate(10deg);
+    }
+  
+    50% {
+      transform: rotate(-5deg);
+    }
+  
+    100% {
+      transform: rotate(10deg);
+    }
+  }
+  
+.icon-2 {
+    position: absolute;
+    top: 0;
+    left: 25px;
+    width: 12px;
+    transform-origin: 50% 0;
+    transform: rotate(10deg);
+    transition: all 1s ease-in-out;
+    filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, .5));
+  }
+  
+.home_button:hover .icon-2 {
+    animation: slay-2 3s cubic-bezier(0.52, 0, 0.58, 1) 1s infinite;
+    transform: rotate(0);
+  }
+  
+  @keyframes slay-2 {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    50% {
+      transform: rotate(15deg);
+    }
+  
+    100% {
+      transform: rotate(0);
+    }
+  }
+  
+.icon-3 {
+    position: absolute;
+    top: 0;
     left: 0;
-    background-color: #000000;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
+    width: 18px;
+    transform-origin: 50% 0;
+    transform: rotate(-5deg);
+    transition: all 1s ease-in-out;
+    filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, .5));
   }
   
-  .cta:hover .hover-underline-animation:after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
+.home_button:hover .icon-3 {
+    animation: slay-3 2s cubic-bezier(0.52, 0, 0.58, 1) 1s infinite;
+    transform: rotate(0);
   }
   
-
-
-/* icon */
-.social-media {
+  @keyframes slay-3 {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    50% {
+      transform: rotate(-5deg);
+    }
+  
+    100% {
+      transform: rotate(0);
+    }
+  }
+  /* --------------------------------------------------------- */
+  
+  
+  /* -- -----------------------social1-------------------------  */
+  .social-media {
     position: relative;
     padding-top: 10px;
     z-index: 1;
@@ -148,109 +189,110 @@
     /* right: 20px; */
 }
 
-.social-media a {
+.social-media  {
     display: inline-block; /* Это делает элементы <a> блочными, но горизонтально */
-    margin-right: 10px; /* Опциональные отступы между иконками */
+    margin-right: 5px; /* Опциональные отступы между иконками */
 }
 
-.social-media a img.icon-top {
-    margin-top: 200px;
+.social-media {
+    margin-left: 50px;
+    transform:  translateY(100px);
   }
 
-  
-  
-  
-  
-  
-  
-  
-  /* buttons */
-.cta-buttons {
-    text-align: center;
-    position: relative;
-    padding-top: 20px;
-    
-}
-  
-  
-header {
-    height: 1px;
-    position: relative;
-    background: linear-gradient(rgba(34, 34, 34, 0.6), rgba(34, 34, 34, 0.6)), url(/home/evgen/Documents/my_website/images/header_back.png);
-    background-size: cover;
-    background-position: center;
-    color: white;
-}
-body {
-    font-family: 'Inter', sans-serif;
+/* ------------------------------------------ */
+
+
+
+.card {
+  display: flex;
+  height: 70px;
+  width: 350px;
 }
 
-nav {
-    font-size: 20px;
-    font-weight: 700;
-    display: flex;
-    justify-content: space-between;
-    padding-top: 32px;
+.card svg {
+  position: absolute;
+  display: flex;
+  width: 60%;
+  height: 100%;
+  font-size: 24px;
+  font-weight: 700;
+  opacity: 1;
+  transition: opacity 0.25s;
+  z-index: 2;
+  padding: 0.25rem;
+  cursor: pointer;
 }
 
-h1 {
-    font-size: 52px;
-    margin-bottom: 32px;
-    line-height: 1.05;
+.card .social-link1,.card .social-link2,.card .social-link3,.card .social-link4,.card .social-link5 ,.card .social-link6, .card .social-link6 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25%;
+  color: whitesmoke;
+  font-size: 24px;
+  text-decoration: none;
+  transition: 0.25s;
+  border-radius: 50px;
 }
 
-h2 {
-    font-size: 44px;
-    margin-bottom: 48px;
+.card svg {
+  transform: scale(1);
 }
 
-p {
-    font-size: 20px;
-    line-height: 1.6;
-    margin-bottom: 48px;
+.card .social-link1:hover {
+  background: #f09433;
+  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+  background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+  animation: bounce_613 0.4s linear;
 }
 
-.btn:link, .btn:visited {
-    font-size: 20px;
-    font-weight: 600;
-    background-color: rgb(199, o, 0);
-    color: #EAF8FF;
-    text-decoration: none;
-    display: inline-block;
-    padding: 16px 32px;
-    border-radius: 25px;
+.card .social-link2:hover {
+  background-color: #242c34;
+  animation: bounce_613 0.4s linear;
 }
 
-.btn:link:hover,
-.btn:visited:hover{
-    opacity: 0.8;
+.card .social-link3:hover {
+  background-color: #5865f2;
+  animation: bounce_613 0.4s linear;
 }
 
-.header-container {
-    width: 1200px;
-    position:absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    padding-left: 3rem;
-    margin-top: 2.5rem;
+.card .social-link4:hover {
+  background-color: #0a66c2;
+  animation: bounce_613 0.4s linear;
 }
 
-.header-container-inner {
-    width: 50%;
+.card .social-link5:hover {
+  background-color: #ff8000;
+  animation: bounce_613 0.4s linear;
 }
 
-.main{
-    background: linear-gradient(rgba(34, 34, 34, 0.6), rgba(34, 34, 34, 0.6)), url(/home/evgen/Documents/my_website/images/background.png);
-
-
-
+.card .social-link6:hover{
+  background-color: #ff8000;
+  animation: bounce_613 0.4s linear;
 }
 
-.me_photo {
-    position: absolute;
-    margin-top: 1px;
-    margin-left: 100px;
-    border-radius: 50%;
-    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.5);
+.card .social-link7:hover{
+  background-color: #ff8000;
+  animation: bounce_613 0.4s linear;
+}
+
+@keyframes bounce_613 {
+  40% {
+    transform: scale(1.4);
   }
+
+  60% {
+    transform: scale(0.8);
+  }
+
+  80% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
